--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -99,8 +99,19 @@ services:
             - '/dev/shm:/dev/shm'
         networks:
             - sail
+    phpmyadmin:
+        depends_on:
+            - mysql
+        image: phpmyadmin/phpmyadmin
+        environment:
+            - PMA_HOST=mysql
+            - PMA_PORT=3306
+        networks:
+            - sail
+        ports:
+            - '8001:80'
 networks:
-    sail:
+    sail:d
         driver: bridge
 volumes:
     sail-mysql:
