update env file and readme.md file

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:oN2Yif4zRfOTzvJdwJP1RCZ5dTR/M9cK5ag1qpW5KO8=
 APP_DEBUG=true
 APP_URL=http://localhost
 
@@ -9,11 +9,11 @@ LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
+DB_HOST=mysql
 DB_PORT=3306
 DB_DATABASE=laravel_react_np
-DB_USERNAME=root
-DB_PASSWORD=
+DB_USERNAME=sail
+DB_PASSWORD=password
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
@@ -24,7 +24,7 @@ SESSION_LIFETIME=120
 
 MEMCACHED_HOST=127.0.0.1
 
-REDIS_HOST=127.0.0.1
+REDIS_HOST=redis
 REDIS_PASSWORD=null
 REDIS_PORT=6379
 
@@ -56,3 +56,16 @@ VITE_PUSHER_HOST="${PUSHER_HOST}"
 VITE_PUSHER_PORT="${PUSHER_PORT}"
 VITE_PUSHER_SCHEME="${PUSHER_SCHEME}"
 VITE_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+SCOUT_DRIVER=meilisearch
+MEILISEARCH_HOST=http://meilisearch:7700
+
+NEWSAPI_API_KEY=e144edd74e5a4181840711d7300f350e
+NEWSAPI_URL=https://newsapi.org/v2/everything/
+
+NYTIMES_API_KEY=crOtnc9jFiMbahWJ5fpLzZhWvwNXz0or
+NYTIMES_URL=https://api.nytimes.com/svc/topstories/v2/
+
+THEGUARDIAN_API_KEY=73b7ccec-1ebb-4dac-a814-04e345e28155
+THEGUARDIAN_URL=https://content.guardianapis.com/search
+
